--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Slideshow</title>
 </head>
 <body>
-    
-    <script src="./script.js"></script>
+   
+        <div class="header"></div>
+        
+        <div class="slider">
+            <div class="slider-controls">
+                <div class="slider-control-left"></div>
+                <div class="slider-control-right"></div>
+            </div>
+
+            <div class="slider-content">              
+                <div class="slide-item" style="background-image: url(./img/children-593313-min.jpg);"></div>
+                <div class="slide-item" style="background-image: url(./img/home-office-569153-min.jpg);"></div>
+                <div class="slide-item" style="background-image: url(./img/lightbulb-1875247-min.jpg);"></div>
+            </div>
+        </div>
+
+    <section>
+        <h1>Resto do site</h1>
+    </section>
+    <script src="./js/script.js"></script>
 </body>
 </html>
